@@ -35,7 +35,6 @@ public class PaymentMethodServiceTest {
 
         id = UUID.randomUUID();
         request = new CreateAndUpdatePaymentMethodRequest();
-        request.setName("Transfer BCA");
         request.setType(PaymentType.BANK_TRANSFER);
         request.setProvider("BCA");
         request.setAccountNumber("1234567890");
@@ -43,7 +42,6 @@ public class PaymentMethodServiceTest {
 
         entity = PaymentMethod.builder()
                 .id(id)
-                .name(request.getName())
                 .type(request.getType())
                 .provider(request.getProvider())
                 .accountNumber(request.getAccountNumber())
@@ -60,7 +58,7 @@ public class PaymentMethodServiceTest {
         GenericResponse<PaymentMethodDetailDto> response = service.create(request);
 
         assertTrue(response.isSuccess());
-        assertEquals("Transfer BCA", response.getData().getName());
+        assertEquals(PaymentType.BANK_TRANSFER, response.getData().getType());
         verify(repository).save(any());
     }
 
@@ -82,7 +80,7 @@ public class PaymentMethodServiceTest {
 
         assertTrue(response.isSuccess());
         assertEquals(1, response.getData().size());
-        assertEquals("Transfer BCA", response.getData().get(0).getName());
+        assertEquals(PaymentType.BANK_TRANSFER, response.getData().getFirst().getType());
     }
 
     @Test
@@ -92,7 +90,7 @@ public class PaymentMethodServiceTest {
         GenericResponse<PaymentMethodDetailDto> response = service.readDetails(id);
 
         assertTrue(response.isSuccess());
-        assertEquals("Transfer BCA", response.getData().getName());
+        assertEquals(PaymentType.BANK_TRANSFER, response.getData().getType());
         verify(repository).findById(id);
     }
 
@@ -109,7 +107,6 @@ public class PaymentMethodServiceTest {
     @Test
     void testUpdatePaymentMethod_Success() {
         CreateAndUpdatePaymentMethodRequest newRequest = new CreateAndUpdatePaymentMethodRequest();
-        newRequest.setName("Dana");
         newRequest.setType(PaymentType.E_WALLET);
         newRequest.setProvider("Dana");
         newRequest.setAccountNumber("9876543210");
@@ -121,7 +118,7 @@ public class PaymentMethodServiceTest {
         GenericResponse<PaymentMethodDetailDto> response = service.update(id, newRequest);
 
         assertTrue(response.isSuccess());
-        assertEquals("Dana", response.getData().getName());
+        assertEquals("Dana", response.getData().getProvider());
         verify(repository).save(any());
     }
 
@@ -137,6 +134,7 @@ public class PaymentMethodServiceTest {
 
     @Test
     void testDeletePaymentMethod_Success() {
+        when(repository.existsById(id)).thenReturn(true);
         doNothing().when(repository).deleteById(id);
 
         GenericResponse<Void> response = service.delete(id);
@@ -144,5 +142,16 @@ public class PaymentMethodServiceTest {
         assertTrue(response.isSuccess());
         assertNull(response.getData());
         verify(repository).deleteById(id);
+    }
+
+    @Test
+    void testDeletePaymentMethod_NotFound() {
+        when(repository.existsById(id)).thenReturn(false);
+
+        GenericResponse<Void> response = service.delete(id);
+
+        assertFalse(response.isSuccess());
+        assertEquals("Payment method not found", response.getMessage());
+        verify(repository, never()).deleteById(id);
     }
 }
